--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,7 @@
 src = 'src'
 out = 'out'
 libs = ['lib']
+solc_version = "0.8.10"
+
 
 # See more config options https://github.com/gakonst/foundry/tree/master/config
