--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "lib/forge-std"]
 	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "lib/ethereum-contracts"]
+	path = lib/ethereum-contracts
+	url = https://github.com/superfluid-finance/ethereum-contracts
